# AlloHubPy

./: .gitignore  MANIFEST.in  MIblock.py  Overlap.py  README.md  SAtraj.py  _mi_block.c  _mi_blockrew.c  create_small_traj.py  main.py  mi_block_extension_build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
Allohubpy/: Allohubpy_cython.pyx  MIblock.py  Overlap.py  SANetwork.py  SAPLM.py  SAtraj.py  TrajProcessor.py
Allohubpy/plotter/: Allohub_plots.py
Allohubpy/src/: encodeframe.c  encodeframe.h  encodeframe_extension_build.py  kabsch.c  kabsch.h  kabsch_extension_build.py
notebooks/: PKM2_analysis.ipynb  README.md
notebooks/data_NtrC/: encoded_NtrC_active_repl1_3di.sa  encoded_NtrC_active_repl1_mk.sa  encoded_NtrC_active_repl2_3di.sa  encoded_NtrC_active_repl2_mk.sa  encoded_NtrC_active_repl3_3di.sa  encoded_NtrC_active_repl3_mk.sa  encoded_NtrC_inactive_repl1_3di.sa  encoded_NtrC_inactive_repl1_mk.sa  encoded_NtrC_inactive_repl2_3di.sa  encoded_NtrC_inactive_repl2_mk.sa  encoded_NtrC_inactive_repl3_3di.sa  encoded_NtrC_inactive_repl3_mk.sa
notebooks/data_PKM2/: apo_repl2_c1short.sa  apo_repl3_c1short.sa  fbp_repl3_c1short.sa
notebooks/data_pkm2/: apo_repl1_c1short.sa  fbp_repl1_c1short.sa  fbp_repl2_c1short.sa
scripts/: example.py
src/: mi_block.c  mi_block.h
